--- a/styles/index.css
+++ b/styles/index.css
@@ -873,6 +873,10 @@ p {
   width: 200px;
 }
 
+.w-\[250px\] {
+  width: 250px;
+}
+
 .max-w-7xl {
   max-width: 80rem;
 }
@@ -892,6 +896,11 @@ p {
 
 .translate-x-\[-100px\] {
   --tw-translate-x: -100px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-\[-125px\] {
+  --tw-translate-x: -125px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
